--- a/style.css
+++ b/style.css
@@ -1,264 +1,55 @@
-body {
-  overflow-x: hidden;
+.container {
+  margin-top: 100px;
 }
 
-.contact-form {
-  background-color: white;
-  margin: 60px;
+.container .form h2 {
+  text-align: center;
+  color: red;
 }
 
-.contact-form .card {
-  padding: 80px;
-  width: 100%;
-  background-color: white;
-  border-radius: 8px;
+.container .form form {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 25px;
+  border-radius: 10px;
 }
 
-.contact-form .card h1 {
+.container .form form .first-col {
+  margin-top: 20px;
+}
+
+.container .form form .first-col input {
+  padding: 30px;
+}
+
+.container .form form .email {
+  margin-top: 5px;
+}
+
+.container .form form .email input {
+  padding: 30px;
+}
+
+.container .form form .Message {
+  margin-top: 5px;
+}
+
+.container .form form .Message input {
+  padding: 30px;
+}
+
+.container .form form .Additional_Details {
+  margin-top: 5px;
+}
+
+.container .form form .send-message {
+  margin-top: 10px;
   text-align: center;
 }
 
-.contact-form .card .form-box {
-  margin-top: 20px;
-}
-
-.contact-form .card .form-box form .first {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-left: -2.2%;
-}
-
-.contact-form .card .form-box form .first input {
-  padding: 30px;
+.container .form form .send-message button {
   width: 100%;
-}
-
-.contact-form .card .form-box form .Email {
-  margin-top: 20px;
-}
-
-.contact-form .card .form-box form .Email input {
-  padding: 30px;
-  width: 98%;
-}
-
-.contact-form .card .form-box form .Message {
-  margin-top: 20px;
-}
-
-.contact-form .card .form-box form .Message textarea {
-  width: 98%;
-}
-
-.contact-form .card .form-box form .Additional_Details {
-  margin-top: 12px;
-}
-
-.contact-form .card .form-box form .Additional_Details textarea {
-  width: 98%;
-}
-
-.contact-form .card .form-box form .send-message {
-  margin-top: 20px;
-  text-align: center;
-  width: 520px;
-}
-
-.contact-form .card .form-box form .send-message button {
-  width: 100%;
-  padding: 15px;
-}
-
-.contact-form .content {
-  padding-left: 30px;
-  padding-right: 100px;
-}
-
-.contact-form .content p {
-  font-size: 22px;
-  color: gray;
-  text-align: justify;
-}
-
-.contact-form .content .demo h4 {
-  font-size: 30px;
-}
-
-.contact-form .content .demo hr {
-  max-width: 950px;
-}
-
-@media (max-width: 2560px) {
-  .contact-form {
-    padding-right: 150px;
-  }
-}
-
-@media (max-width: 1466px) {
-  .contact-form {
-    width: 100%;
-  }
-  .contact-form .card {
-    padding: 25px;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 565px !important;
-  }
-}
-
-@media (max-width: 1440px) {
-  .contact-form {
-    width: 100%;
-    margin-left: 75px;
-  }
-  .contact-form .card {
-    padding: 30px;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 480px !important;
-  }
-  .contact-form .content .demo h2 {
-    font-size: 25px;
-  }
-  .contact-form .content .demo p {
-    font-size: 15px;
-  }
-  .contact-form .content .demo h4 {
-    font-size: 22px;
-  }
-}
-
-@media (max-width: 1024px) {
-  .contact-form {
-    margin-left: 70px;
-  }
-  .contact-form .card {
-    width: 100%;
-  }
-  .contact-form .card .form-box .first {
-    display: block !important;
-  }
-  .contact-form .card .form-box .first .last-col {
-    margin-top: 20px;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 98% !important;
-  }
-  .contact-form .content {
-    padding-left: 0%;
-  }
-  .contact-form .content h1 {
-    margin-top: 100px;
-    font-size: 30px;
-  }
-  .contact-form .content p {
-    font-size: 16px;
-  }
-  .contact-form .content h4 {
-    font-size: 22px !important;
-  }
-  .contact-form .content .demo p {
-    font-size: 16px !important;
-  }
-}
-
-@media (max-width: 768px) {
-  .contact-form {
-    margin-left: 40px;
-  }
-  .contact-form .card {
-    width: 690px;
-  }
-  .contact-form .card .form-box {
-    margin-left: 10px;
-  }
-  .contact-form .card .form-box .first {
-    display: block !important;
-    width: 100%;
-  }
-  .contact-form .card .form-box .first .first-col {
-    width: 650px;
-  }
-  .contact-form .card .form-box .first .last-col {
-    margin-top: 20px;
-    width: 650px;
-  }
-  .contact-form .card .form-box .Email {
-    width: 664px !important;
-  }
-  .contact-form .card .form-box .Message {
-    width: 664px !important;
-  }
-  .contact-form .card .form-box .Additional_Details {
-    width: 664px;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 650px !important;
-  }
-  .contact-form .content {
-    width: 100%;
-    padding-right: 0%;
-  }
-}
-
-@media (max-width: 425px) {
-  .contact-form {
-    margin: 12px;
-    margin-top: 50px;
-    width: 700px !important;
-  }
-  .contact-form .card {
-    padding: 20px;
-    width: 630px;
-  }
-  .contact-form .card .form-box .first {
-    margin-left: -17px !important;
-  }
-  .contact-form .card .form-box .first .first-col {
-    width: 100%;
-  }
-  .contact-form .card .form-box .first .last-col {
-    width: 100%;
-  }
-  .contact-form .card .form-box .Email {
-    width: 97.5% !important;
-  }
-  .contact-form .card .form-box .Message {
-    width: 97.5% !important;
-  }
-  .contact-form .card .form-box .Additional_Details {
-    width: 97.5%;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 500px !important;
-  }
-}
-
-@media (max-width: 375px) {
-  .contact-form {
-    margin: 0px;
-    margin-left: 70px;
-    margin-top: 20px;
-    width: 100%;
-  }
-  .contact-form .card {
-    padding: 20px;
-    width: 100%;
-  }
-  .contact-form .card .form-box .first {
-    margin-left: -17px !important;
-  }
-  .contact-form .card .form-box .first .first-col {
-    width: 500px;
-  }
-  .contact-form .card .form-box .first .last-col {
-    width: 500px;
-  }
-  .contact-form .card .form-box .send-message {
-    width: 375px !important;
-  }
+  height: 8%;
+  background-color: red;
 }
 /*# sourceMappingURL=style.css.map */
