--- a/style.scss
+++ b/style.scss
@@ -1,274 +1,51 @@
-body {
-    overflow-x: hidden;
-}
-
-.contact-form {
-    background-color: white;
-    margin: 60px;
-    // margin-left: 200px;
-    .card {
-        padding: 80px;
-        width: 100%;
-        background-color: white;
-        border-radius: 8px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-        h1 {
+.container{
+    margin-top: 100px;
+    .form{
+        h2{
             text-align: center;
+            color: red;
         }
-
-        .form-box {
-            margin-top: 20px;
-            form {
-                .first {
-                    display: flex;
-                    margin-left: -2.2%;
-                    input {
-                        padding: 30px;
-                        width: 100%;
-                    }
-                }
-
-                .Email {
-                    margin-top: 20px;
-                    input {
-                        padding: 30px;
-                        width: 98%;
-                    }
-                }
-                .Message {
-                    margin-top: 20px;
-                    textarea {
-                        width: 98%;
-                    }
-                }
-                .Additional_Details {
-                    margin-top: 12px;
-                    textarea {
-                        width: 98%;
-                    }
-                }
-                .send-message {
-                    margin-top: 20px;
-                    text-align: center;
-                    width: 520px;
-                    button {
-                        width: 100%;
-                        padding: 15px;
-                    }
-                }
-            }
-        }
-    }
-
-    .content {
-        padding-left: 30px;
-        padding-right: 100px;
-        p {
-            font-size: 22px;
-            color: gray;
-            text-align: justify;
-        }
-        .demo {
-            h4 {
-                font-size: 30px;
-            }
-            hr {
-                max-width: 950px;
-            }
-        }
-    }
-}
-
-@media (max-width: 2560px) {
-    .contact-form {
-        padding-right: 150px;
-    }
-}
-
-@media (max-width: 1466px) {
-    .contact-form {
-        width: 100%;
-        .card {
+        form{
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             padding: 25px;
-            .form-box {
-                .send-message {
-                    width: 565px !important;
+            border-radius: 10px;
+                .first-col{
+                    margin-top: 20px;
+                    input{
+                        padding: 30px;
+                    }
                 }
-            }
-        }
-    }
-}
-
-@media (max-width: 1440px) {
-    .contact-form {
-        width: 100%;
-        margin-left: 75px;
-        .card {
-            padding: 30px;
-            .form-box {
-                .send-message {
-                    width: 480px !important;
-                }
-            }
-        }
-
-        .content {
-            .demo {
-                h2 {
-                    font-size: 25px;
-                }
-                p {
-                    font-size: 15px;
-                }
-                h4 {
-                    font-size: 22px;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 1024px) {
-    .contact-form {
-        margin-left: 70px;
-        .card {
-            width: 100%;
-            .form-box {
-                .first {
-                    display: block !important;
-                    .last-col {
-                        margin-top: 20px;
+                .email{
+                    margin-top: 5px;
+                    input{
+                        padding: 30px;
                     }
                 }
 
-                .send-message {
-                    width: 98% !important;
-                }
-            }
-        }
-
-        .content {
-            padding-left: 0%;
-            h1 {
-                margin-top: 100px;
-                font-size: 30px;
-            }
-            p {
-                font-size: 16px;
-            }
-            h4 {
-                font-size: 22px !important;
-            }
-
-            .demo {
-                p {
-                    font-size: 16px !important;
-                }
-            }
-        }
-    }
-}
-
-@media (max-width: 768px) {
-    .contact-form {
-        margin-left: 40px;
-        .card {
-            width: 690px;
-            .form-box {
-                margin-left: 10px;
-                .first {
-                    display: block !important;
-                    width: 100%;
-                    .first-col {
-                        width: 650px;
-                    }
-                    .last-col {
-                        margin-top: 20px;
-                        width: 650px;
+                .Message{
+                    margin-top: 5px;
+                    input{
+                        padding: 30px;
                     }
                 }
-                .Email {
-                    width: 664px !important;
+
+                .Additional_Details{
+                    margin-top: 5px;
                 }
 
-                .Message {
-                    width: 664px !important;
-                }
-                .Additional_Details {
-                    width: 664px;
-                }
-                .send-message {
-                    width: 650px !important;
-                }
-            }
-        }
-
-        .content {
-            width: 100%;
-            padding-right: 0%;
-        }
-    }
-}
-
-@media (max-width: 425px) {
-    .contact-form {
-        margin: 12px;
-        margin-top: 50px;
-        width: 700px !important;
-        .card {
-            padding: 20px;
-            width: 630px;
-            .form-box {
-                .first {
-                    margin-left: -17px !important;
-                    .first-col {
+                .send-message{
+                    margin-top: 10px;
+                    text-align: center;
+                    
+                    button{
                         width: 100%;
-                    }
-                    .last-col {
-                        width: 100%;
+                        height: 8%;
+                        background-color: red;
                     }
                 }
 
-                .Email {
-                    width: 97.5% !important;
-                }
-                .Message {
-                    width: 97.5% !important;
-                }
-                .Additional_Details {
-                    width: 97.5%;
-                }
-                .send-message {
-                    width: 500px !important;
-                }
-            }
         }
     }
 }
 
-@media (max-width: 375px) {
-    .contact-form {
-        margin: 0px;
-        margin-left:70px;
-        margin-top: 20px;
-        width: 100%;
-        .card {
-            padding: 20px;
-            width: 100%;
-            .form-box {
-                .first {
-                    margin-left: -17px !important;
-                    .first-col {
-                        width: 500px;
-                    }
-                    .last-col {
-                        width: 500px;
-                    }
-                }
-                .send-message {
-                    width: 375px !important;
-                }
-            }
-        }
-    }
-}
+
