--- a/style.css
+++ b/style.css
@@ -1,55 +1,124 @@
-.container {
+.contact-form {
   margin-top: 100px;
+  padding: 60px;
+  padding-right: 150px;
 }
 
-.container .form h2 {
+.contact-form .form {
+  margin-right: 80px;
+}
+
+.contact-form .form h2 {
   text-align: center;
   color: red;
 }
 
-.container .form form {
+.contact-form .form form {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 25px;
   border-radius: 10px;
 }
 
-.container .form form .first-col {
+.contact-form .form form .first-col {
   margin-top: 20px;
 }
 
-.container .form form .first-col input {
+.contact-form .form form .first-col input {
   padding: 30px;
 }
 
-.container .form form .email {
+.contact-form .form form .email {
   margin-top: 5px;
 }
 
-.container .form form .email input {
+.contact-form .form form .email input {
   padding: 30px;
 }
 
-.container .form form .Message {
+.contact-form .form form .Message {
   margin-top: 5px;
 }
 
-.container .form form .Message input {
+.contact-form .form form .Message input {
   padding: 30px;
 }
 
-.container .form form .Additional_Details {
+.contact-form .form form .Additional_Details {
   margin-top: 5px;
 }
 
-.container .form form .send-message {
+.contact-form .form form .send-message {
   margin-top: 10px;
   text-align: center;
 }
 
-.container .form form .send-message button {
+.contact-form .form form .send-message button {
   width: 100%;
   height: 8%;
   background-color: red;
+}
+
+.contact-form .content {
+  margin-top: 50px;
+  margin-right: 60px;
+}
+
+.contact-form .content p {
+  text-align: justify;
+}
+
+.contact-info h2 {
+  text-align: center;
+}
+
+.contact-info h4 {
+  text-align: center;
+  margin-left: 0%;
+}
+
+@media (max-width: 1440px) {
+  .contact-form {
+    padding-left: 100px;
+    margin-left: 30px;
+  }
+  .contact-form .content {
+    margin-top: 10px;
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .contact-form {
+    padding-left: 30px;
+    margin-left: 0px;
+    padding-right: 20px;
+  }
+  .contact-form .form {
+    margin-right: -5px;
+  }
+  .contact-form .content {
+    margin-top: 10px;
+    margin-right: 0px;
+  }
+  .contact-form .content .demo h2 {
+    font-size: 24px;
+  }
+  .contact-form .content .demo p {
+    font-size: 14px;
+  }
+  .contact-form .content .demo h4 {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .contact-form {
+    padding-left: 15px;
+    margin-top: 0%;
+  }
+  .contact-form .content {
+    margin-top: 60px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
