--- a/style.scss
+++ b/style.scss
@@ -1,51 +1,116 @@
-.container{
+.contact-form {
     margin-top: 100px;
-    .form{
-        h2{
+    padding: 60px;
+    padding-right: 150px;
+    .form {
+        margin-right: 80px;
+        h2 {
             text-align: center;
             color: red;
         }
-        form{
+        form {
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             padding: 25px;
             border-radius: 10px;
-                .first-col{
-                    margin-top: 20px;
-                    input{
-                        padding: 30px;
-                    }
+            .first-col {
+                margin-top: 20px;
+                input {
+                    padding: 30px;
                 }
-                .email{
-                    margin-top: 5px;
-                    input{
-                        padding: 30px;
-                    }
+            }
+            .email {
+                margin-top: 5px;
+                input {
+                    padding: 30px;
                 }
+            }
 
-                .Message{
-                    margin-top: 5px;
-                    input{
-                        padding: 30px;
-                    }
+            .Message {
+                margin-top: 5px;
+                input {
+                    padding: 30px;
                 }
+            }
 
-                .Additional_Details{
-                    margin-top: 5px;
+            .Additional_Details {
+                margin-top: 5px;
+            }
+
+            .send-message {
+                margin-top: 10px;
+                text-align: center;
+
+                button {
+                    width: 100%;
+                    height: 8%;
+                    background-color: red;
                 }
+            }
+        }
+    }
 
-                .send-message{
-                    margin-top: 10px;
-                    text-align: center;
-                    
-                    button{
-                        width: 100%;
-                        height: 8%;
-                        background-color: red;
-                    }
-                }
-
+    .content {
+        margin-top: 50px;
+        margin-right: 60px;
+        p {
+            text-align: justify;
         }
     }
 }
 
+.contact-info {
+    h2{
+        text-align: center;
+    }
+    h4{
+        text-align: center;
+        margin-left: 0%;
+    }
+}
 
+@media (max-width: 1440px) {
+    .contact-form {
+        padding-left: 100px;
+        margin-left: 30px;
+        .content {
+            margin-top: 10px;
+            margin-right: 30px;
+        }
+    }
+}
+
+@media (max-width: 1024px) {
+    .contact-form {
+        padding-left: 30px;
+        margin-left: 0px;
+        padding-right: 20px;
+        .form {
+            margin-right: -5px;
+        }
+        .content {
+            margin-top: 10px;
+            margin-right: 0px;
+            .demo {
+                h2 {
+                    font-size: 24px;
+                }
+                p {
+                    font-size: 14px;
+                }
+                h4 {
+                    font-size: 18px;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+    .contact-form {
+        padding-left: 15px;
+        margin-top: 0%;
+        .content {
+            margin-top: 60px;
+        }
+    }
+}
